hello/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: golang-hello-container
          image: golang-hello:0.1
          ports:
            - containerPort: 8888
