hello/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: LoadBalancer
