hello/k8s/hello-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-virtual-service
spec:
  hosts:
    - "myapp.example.com"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            exact: /hello
      rewrite:
        uri: "/"
      route:
        - destination:
            host: hello-service.hello.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /hello/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: hello-service.hello.svc.cluster.local
            port:
              number: 80
